# protobuf-grpc-distutils-example

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
helloworld/: client.py  server.py
proto/: hello.proto
proto/helloworld/: hello.proto
src/helloworld/: server.py
